# diria

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.toml.example  diria.py  pyproject.toml
